fix: fix swagger leave community route
