# docs/swagger.yaml
@@ -49,13 +49,6 @@ definitions:
         example: true
         type: boolean
     type: object
-  dto.UserCommunity:
-    properties:
-      community_id:
-        type: integer
-      user_id:
-        type: integer
-    type: object
 host: localhost:9000
 info:
   contact: {}
@@ -329,6 +322,35 @@ paths:
       summary: Join to community
       tags:
       - communities
+  /communities/{id}/leave:
+    delete:
+      description: Leave specified community
+      parameters:
+      - description: Community ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerToken: []
+      summary: Leave community
+      tags:
+      - communities
   /communities/{id}/members:
     get:
       description: Get community member
@@ -350,36 +372,6 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
       summary: Get community member
-      tags:
-      - communities
-  /communities/leave:
-    delete:
-      description: Leave specified community
-      parameters:
-      - description: body to leave community
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UserCommunity'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      security:
-      - BearerToken: []
-      summary: Leave community
       tags:
       - communities
   /communities/popular:
